Fix deprecated things